--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "13.0.7",
+    "@next/mdx": "~13.0.7",
     "@sup39/mdx-components": "^0.1.0",
-    "@sup39/mdx-page": "^0.2.0",
+    "@sup39/mdx-page": "^0.3.0",
     "@sup39/rehype-mdx-auto-import": "^1.0.0",
     "@sup39/rehype-mdx-component-wrapper": "^0.1.0",
     "@sup39/rehype-mdx-export-headings": "^0.1.1",
-    "next": "13.0.7",
+    "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-katex": "^6.0.2",
